--- a/csbs/1st_sem.html
+++ b/csbs/1st_sem.html
@@ -10,7 +10,7 @@
 		<h2>PYQ</h2>
 		<ol>
 			<li>
-				<a href="\1st_2nd_sem_pdf\1st_semPyq.pdf" download="1st_semPyq.pdf"> 1st Sem Pyq</a>
+				<a href="1st_2nd_sem_pdf\1st_semPyq.pdf" download="1st_semPyq.pdf"> 1st Sem Pyq</a>
 			</li>
 		</ol>
 	</div>
@@ -18,7 +18,7 @@
 		<h2>SUGGESTION</h2>
 		<ol>
 			<li>
-				<a href="\1st_2nd_sem_pdf\QB DISCRETE CSBS1.docx" download="QB DISCRETE CSBS1.docx"> DISCRETE Math</a>
+				<a href="1st_2nd_sem_pdf\QB DISCRETE CSBS1.docx" download="QB DISCRETE CSBS1.docx"> DISCRETE Math</a>
 			</li>
 			<li>
 				<a href="\1st_2nd_sem_pdf\QB DISCRETE CSBS1.docx" download="QB DISCRETE CSBS1.docx"> Math</a>
