--- a/csbs/1st_sem.html
+++ b/csbs/1st_sem.html
@@ -25,6 +25,6 @@
 			</li>
 		</ol>
 	</div>
-	<marquee behavior="" direction="left"><p>Please ignor User Interface</p></marquee>
+	<marquee behavior="" direction="left"><p>Please ignore User Interface</p></marquee>
 </body>
 </html>
