--- a/firstYear.html
+++ b/firstYear.html
@@ -17,7 +17,7 @@
 			<div class="textHolder">
 				<h2>CSBS</h2>
 				<p>
-					First Year Computer Science and Business System department previous year subject wise question paper
+					First Year CSBS department previous year subject wise question paper
 					of both internal and semester exam is available in this section.
 					Click bellow to see Previous Year question paper.
 				</p>
